# gnatstudio

./: .als.json  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.plan  .gitlab-ci.yml  .gitmodules  .gitreview  .pre-commit-config.yaml  AGENTS.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CODEOWNERS  DEPENDENCIES.md  INSTALL  MODULES.md  Makefile  Makefile.common  Makefile.common.in  Makefile.gnat  Makefile.in  PLAN.md  README  README.md  SESSION_STATE.md  TOOLCHAIN_FIX.md  acinclude.m4  aclocal.m4  alire.toml  config.sub  configure  configure.ac  configure.in  distrib.gpr  features-17.0  fix_toolchain.sh  gnat.gpr  gps.library  gps_aggregated.gpr  plugins.gpr  (+5 more)
corelib/: Makefile  Makefile.conf.in  README  aclocal.m4  configure  configure.in  default.gpr  shared.gpr.in
corelib/docs/: Makefile  Makefile.in  corelib.css  corelib.texi  texiplus.tex
corelib/scripts/: Makefile  corelib_scripts.gpr  corelib_scripts_gtk.gpr
corelib/scripts/examples/: common.adb  common.ads  common_gtk.adb  common_gtk.ads  examples.gpr  examplesgtk.gpr  gtkconsole.adb  gtkconsole.ads  newclass.adb  newclassgtk.adb  textconsole.adb  textconsole.ads
corelib/scripts/src/: scripts-impl.adb  scripts-impl.ads  scripts-shell.adb  scripts-shell.ads  scripts-utils.adb  scripts-utils.ads  scripts.adb  scripts.ads
corelib/scripts/src_gtk/: scripts-gtkada.adb  scripts-gtkada.ads
corelib/scripts/testsuite/: run.sh  test1.out  test1.py  test2.gsh  test3.out  test3.py  testapi.adb  testapi.out  testconsole.adb  testconsole.ads  testsuite.adb  testsuite.gpr  testsuite_export.adb  testsuite_export.ads  valgrind-python.supp  valgrind.supp
gvd/: .cvsignore  AUTHORS  INSTALL  Makefile  Makefile.gvd  Makefile.gvd_common.in  Makefile.gvd_glide  aclocal.m4  config.guess  configure  configure.in  gnat_gvd.gpr  gvd.gpr  gvd_common.gpr  gvd_common_no_xmlada.gpr.in  gvd_common_with_xmlada.gpr.in  gvd_glide.gpr
gvd/Attic/canvas/: qwz_canvas.adb  qwz_canvas.ads
gvd/common/: .cvsignore  ada_analyzer.adb  ada_analyzer.ads  basic_types.adb  basic_types.ads  c_analyzer.adb  c_analyzer.ads  case_handling.adb  case_handling.ads  config.ads.in  ctrl_c.c  dock_paned.adb  dock_paned.ads  file-utils.c  file_utils.adb  file_utils.ads  generic_list.adb  generic_list.ads  generic_stack.adb  generic_stack.ads  gint_xml.ads  glide_interactive_consoles.adb  glide_interactive_consoles.ads  gtkada-mdi.adb  gtkada-mdi.ads  gtkada-toolbar.adb  gtkada-toolbar.ads  gui_utils.adb  gui_utils.ads  gui_utils_support.c  gvd.ads.in  histories.adb  histories.ads  htables.adb  htables.ads  indent_stack.ads  interactive_consoles.adb  interactive_consoles.ads  language-ada.adb  language-ada.ads  (+33 more)
gvd/common/no_xmlada/: xml_parsers.adb
gvd/common/with_xmlada/: xml_parsers.adb
gvd/distrib/: .gnat_wrapper  README  doinstall  features  gvd.el  known-problems
gvd/docs/: .cvsignore  Makefile  Makefile.in  assembly.eps  breakpoints.eps  canvas.eps  colors.eps  explorer.eps  gvd.texi  gvd_contents.texi  main-window.eps  memory-view.eps  process.eps  tasks.eps  texi2html  texiplus.tex  tooltips.eps
gvd/gdbmi/: Makefile  gdbmi.gpr  libgdbmi.gpr
gvd/gdbmi/src/: mi-ast-pretty_printers.adb  mi-ast-pretty_printers.ads  (+11 more)
gvd/glide/: commands-debugger.adb  commands-debugger.ads  gvd-text_box-source_editor-glide.adb  gvd-text_box-source_editor-glide.ads  gvd_module.adb  gvd_module.ads
gvd/gmop/: Makefile  libgmop.gpr
gvd/gnat/: Makefile  Makefile.in  README  a-expect.c  g-expect.adb  g-expect.ads  g-exptty.adb  g-exptty.ads  g-regpat.adb  g-regpat.ads  g-tty.adb  g-tty.ads  gexpect.c  gexpect_tty.c  s-memory.adb  syssignal.h  systty.h
gvd/gvd/: .cvsignore  Makefile.in  advanced_breakpoint_pkg-callbacks.adb  advanced_breakpoint_pkg-callbacks.ads  advanced_breakpoint_pkg.adb  advanced_breakpoint_pkg.ads  breakpoints_editor.adb  breakpoints_editor.ads  breakpoints_pkg-callbacks.adb  breakpoints_pkg-callbacks.ads  breakpoints_pkg.adb  breakpoints_pkg.ads  callbacks_odd.ads  commands-debugger.adb  commands-debugger.ads  debugger-gdb-ada.adb  debugger-gdb-ada.ads  debugger-gdb-c.adb  debugger-gdb-c.ads  debugger-gdb-cpp.adb  debugger-gdb-cpp.ads  debugger-gdb.adb  debugger-gdb.ads  debugger-gdb_mi.adb  debugger-gdb_mi.ads  debugger-jdb-java.adb  debugger-jdb-java.ads  debugger-jdb.adb  debugger-jdb.ads  debugger-vms-ada.adb  debugger-vms-ada.ads  debugger-vms.adb  debugger-vms.ads  debugger.adb  debugger.ads  debugger_pixmaps.adb  debugger_pixmaps.ads  default_preferences.adb  default_preferences.ads  display_items.adb  (+162 more)
gvd/pixmaps/: Makefile  Makefile.in  arrow_xpm  box_xpm  break_xpm  breakat_xpm  cancel_xpm  close_block_xpm  cont_xpm  current_xpm  display_small_xpm  display_xpm  dot_xpm  down_xpm  findfwd_xpm  finish_xpm  fold_block_xpm  grey_dot_xpm  i_page_xpm  interrupt_xpm  kill_xpm  lock_xpm  lookup_xpm  mini-folder_xpm  mini_page_xpm  modified_page_xpm  next_xpm  nexti_xpm  package_xpm  paint_xpm  pixmaps.c  plot_xpm  print_xpm  rotate_xpm  run_xpm  set_xpm  show_xpm  start_xpm  step_xpm  stepi_xpm  (+17 more)
gvd/po/: Makefile.in  build_skeleton.sh  fr.po  maketext.sh  skeleton.po
gvd/src/: .cvsignore  advanced_breakpoint_pkg-callbacks.adb  advanced_breakpoint_pkg-callbacks.ads  advanced_breakpoint_pkg.adb  advanced_breakpoint_pkg.ads  breakpoints_editor.adb  breakpoints_editor.ads  breakpoints_pkg-callbacks.adb  breakpoints_pkg-callbacks.ads  breakpoints_pkg.adb  breakpoints_pkg.ads  commands-debugger.adb  commands-debugger.ads  debugger-base_gdb-ada.adb  debugger-base_gdb-ada.ads  debugger-base_gdb-c.adb  debugger-base_gdb-c.ads  debugger-base_gdb-cpp.adb  debugger-base_gdb-cpp.ads  debugger-base_gdb-gdb_cli.adb  debugger-base_gdb-gdb_cli.ads  debugger-base_gdb-gdb_mi.adb  debugger-base_gdb-gdb_mi.ads  debugger-base_gdb.adb  debugger-base_gdb.ads  debugger-gdb-ada.adb  debugger-gdb-ada.ads  debugger-gdb-c.adb  debugger-gdb-c.ads  debugger-gdb-cpp.adb  debugger-gdb-cpp.ads  debugger-gdb.adb  debugger-gdb.ads  debugger-gdb_mi.adb  debugger-gdb_mi.ads  debugger-lldb.adb  debugger-lldb.ads  debugger.adb  debugger.ads  debugger_pixmaps.adb  (+133 more)
gvd/win32/: winps.adb
(+8076 files in other folders)
