AC_INIT(aclocal.m4)
AC_CANONICAL_SYSTEM

AM_PATH_GTK
AM_PATH_PYTHON
AM_PATH_PYGTK(2.8)

AM_TO_GPR($PYTHON_LIBS,   PYTHON_LIBS_GPR)
AM_TO_GPR($PYTHON_CFLAGS, PYTHON_CFLAGS_GPR)
AM_TO_GPR($PYGTK_INCLUDE, PYGTK_INCLUDE_GPR)
AM_TO_GPR($GTK_CFLAGS,    GTK_CFLAGS_GPR)

AC_CHECK_PROGS(MAKEINFO, makeinfo)
AC_CHECK_PROGS(TEXI2DVI, texi2dvi)
AC_SUBST(MAKEINFO)
AC_SUBST(TEXI2DVI)

AC_OUTPUT(shared.gpr docs/Makefile Makefile.conf)
