dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/db_capi.c)
AC_CONFIG_HEADER(include/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_AWK

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS([strerror getopt])

CY_AC_BERKELEY_DB


AC_OUTPUT([src/Makefile])
